# tauri-react-example

./: .gitignore  .prettierrc  README.md  craco.config.js  index.html  package-lock.json  package.json  snowpack.config.json  tsconfig.json  vite.config.ts
public/: index.html
src/: App.css  App.js  App.tsx  Dnd.tsx  index.css  index.html  index.js  index.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs
