[package]
name = "tauri-react-example"
version = "0.1.2"
description = "A Tauri App"
authors = [ "you" ]
license = "Apache-2.0 OR MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0.0-rc.2" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "next", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
