[package]
name = "tauri-react-example"
version = "0.1.2"
description = "A Tauri App"
authors = [ "you" ]
license = "Apache-2.0 OR MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.2.5", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
